<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chipGroup"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedChip="@+id/business_chip">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/business_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/entertainment_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/general_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/health_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/science_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/sports_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_filter"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:id="@+id/technology_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech_filter"/>
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>